<android.support.design.widget.CoordinatorLayout
  android:id="@+id/coordinator_layout"
  xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/MyCoordinatorLayout">
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <ScrollView
      android:scrollbars="none"
      android:id="@+id/login_form"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true">

      <LinearLayout
        android:gravity="center"
        android:padding="@dimen/paddingMargin"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <include
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          layout="@layout/logo_layout"/>

        <!--  Email-->
        <EditText
          android:layout_marginTop="@dimen/margin_30"
          style="@style/MyETtheme"
          android:id="@+id/user_email_et"
          android:hint="@string/prompt_signup_email"
          android:inputType="textEmailAddress"/>

        <TextView
          android:visibility="gone"
          android:layout_gravity="left"
          android:id="@+id/email_et_error_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/error_invalid_email"
          android:textColor="@color/error_red"
          android:textSize="16sp"/>


        <!-- Mobile no-->
        <EditText
          android:layout_marginTop="@dimen/margin_15"
          android:id="@+id/mobile_number_et"
          style="@style/MyETtheme"
          android:hint="@string/prompt_mobile_number"
          android:inputType="phone"/>

        <TextView
          android:visibility="gone"
          android:layout_gravity="left"
          android:id="@+id/mobile_number_et_error_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/error_invalid_mobile"
          android:textColor="@color/error_red"
          android:textSize="16sp"/>


        <Button
          android:layout_marginRight="@dimen/margin_40"
          android:layout_marginLeft="@dimen/margin_40"
          android:id="@+id/update_button"
          style="@style/MyButtonthemeBlue"
          android:layout_marginTop="@dimen/margin_30"
          android:text="@string/update_btn"/>

      </LinearLayout>

    </ScrollView>
  </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>